[project]
name = "prova1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FrancescoMeroni", email = "francesco7.meroni@mail.polimi.it"},
]
dependencies = ["pandas>=2.3.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
